--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -2,24 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Scrapping from reclameaqui.com.br\n",
-    "\n",
-    "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "import time\n",
-    "import asyncio\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.firefox.options import Options\n",
+    "from selenium.webdriver.firefox.service import Service\n",
     "\n",
-    "# 'playwright install' para instalar os drivers do navegador\n",
-    "from playwright.async_api import async_playwright\n"
+    "from selenium.webdriver.common.by import By\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +29,29 @@
     "url_p = 'https://www.reclameaqui.com.br/empresa/' + empresa + '/'\n",
     "\n",
     "# URL da pagina de reclamações da empresa\n",
-    "url_r = 'https://www.reclameaqui.com.br/empresa/' + empresa + '/lista-reclamacoes/'\n"
+    "url_r = 'https://www.reclameaqui.com.br/empresa/' + empresa + '/lista-reclamacoes/'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configurações do navegador\n",
+    "ff_options = Options()\n",
+    "ff_options.headless = False\n",
+    "\n",
+    "# Configurações do serviço\n",
+    "service = Service('geckodriver.exe')\n",
+    "\n",
+    "# driver\n",
+    "driver = webdriver.Firefox(options=ff_options, service=service)\n",
+    "\n",
+    "# acessando a pagina principal da empresa\n",
+    "driver.get(url_p)\n",
+    "\n"
    ]
   },
   {
@@ -39,62 +60,63 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Page' object has no attribute 'waitForSelector'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 36\u001b[39m\n\u001b[32m     32\u001b[39m       \u001b[38;5;28;01mawait\u001b[39;00m browser.close()\n\u001b[32m     33\u001b[39m       \u001b[38;5;28;01mreturn\u001b[39;00m metadata\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m metadata = \u001b[38;5;28;01mawait\u001b[39;00m get_metadata(url_p)\n\u001b[32m     37\u001b[39m \u001b[38;5;28mprint\u001b[39m(metadata)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 11\u001b[39m, in \u001b[36mget_metadata\u001b[39m\u001b[34m(url)\u001b[39m\n\u001b[32m      7\u001b[39m page = \u001b[38;5;28;01mawait\u001b[39;00m browser.new_page()\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m page.goto(url, wait_until=\u001b[33m'\u001b[39m\u001b[33mdomcontentloaded\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m \u001b[43mpage\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwaitForSelector\u001b[49m(\u001b[33m'\u001b[39m\u001b[33ma#info_segmento_hero\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Pega o HTML renderizado\u001b[39;00m\n\u001b[32m     15\u001b[39m html = \u001b[38;5;28;01mawait\u001b[39;00m page.content()\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Page' object has no attribute 'waitForSelector'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nome': 'temu', 'categoria': 'Varejo', 'reputacao': 'Não Recomendada', 'sobre': 'A Temu é uma empresa de comércio eletrônico que conecta consumidores a milhões de parceiros de mercadorias, fabricantes e marcas com a missão de capacitá-los a viver uma vida melhor.', 'desempenho_geral': None}\n"
      ]
     }
    ],
    "source": [
     "# pegando metadados da empresa (nome, categoria, reputação, sobre, desempenho_geral)\n",
-    "async def get_metadata(url):\n",
-    "   async with async_playwright() as p:\n",
+    "def get_metadata(driver):\n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "   categoria = driver.find_element(By.ID, 'info_segmento_hero').text\n",
+    "   \n",
+    "   reputacao = driver.find_element(By.ID, 'tag_reputacao_hero').text\n",
+    "   \n",
+    "   sobre = driver.find_element(By.CSS_SELECTOR, 'ul.sc-1915fv4-2.idgfcC').text\n",
+    "   sobre = sobre.split(\"\\n\")[0]\n",
+    "   \n",
+    "   desempenho_geral = None\n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "   metadata = {\n",
+    "      'nome': empresa,\n",
+    "      'categoria': categoria,         \n",
+    "      'reputacao': reputacao,         \n",
+    "      'sobre': sobre,             \n",
+    "      'desempenho_geral': desempenho_geral  \n",
+    "   }\n",
+    "   \n",
+    "   return metadata\n",
     "      \n",
-    "      # inicializa o navegador e a página\n",
-    "      browser = await p.chromium.launch(headless=True)\n",
-    "      page = await browser.new_page()\n",
     "      \n",
-    "      \n",
-    "      await page.goto(url, wait_until='domcontentloaded')\n",
-    "      \n",
-    "      \n",
-    "      \n",
-    "      # Pega o HTML renderizado\n",
-    "      html = await page.content()\n",
-    "      soup = BeautifulSoup(html, 'html.parser')\n",
-    "\n",
-    "      # pegar categoria\n",
-    "      categoria = soup.find('a', id='info_segmento_hero')\n",
-    "      print(categoria.text)\n",
-    "      \n",
-    "      \n",
-    "\n",
-    "      metadata = {\n",
-    "         'nome': empresa,\n",
-    "         'categoria': None,         \n",
-    "         'reputacao': None,         \n",
-    "         'sobre': None,             \n",
-    "         'desempenho_geral': None   \n",
-    "      }\n",
-    "      \n",
-    "      await browser.close()\n",
-    "      return metadata\n",
     "\n",
     "\n",
-    "metadata = await get_metadata(url_p)\n",
+    "metadata = get_metadata(driver)\n",
     "print(metadata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.quit()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "meu_ambiente",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
