--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,12 @@
     "from selenium.webdriver.firefox.options import Options\n",
     "from selenium.webdriver.firefox.service import Service\n",
     "import os\n",
-    "\n",
     "from selenium.webdriver.common.by import By\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,19 +29,30 @@
     "url_p = 'https://www.reclameaqui.com.br/empresa/' + empresa + '/'\n",
     "\n",
     "# URL da pagina de reclamações da empresa\n",
-    "url_r = 'https://www.reclameaqui.com.br/empresa/' + empresa + '/lista-reclamacoes/?status=ANSWERED'\n",
+    "def url_r(page : int, type : str = 'EVALUATED') -> str:\n",
+    "\n",
+    "    # https://www.reclameaqui.com.br/empresa/temu/lista-reclamacoes/?pagina=1&status=EVALUATED\n",
+    "    return 'https://www.reclameaqui.com.br/empresa/' + empresa + '/lista-reclamacoes/?pagina='+ str(page) +'&status=' + type\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configurações do navegador\n",
     "ff_options = Options()\n",
     "ff_options.headless = False\n",
+    "ff_options.add_argument(\"--disable-gpu\")\n",
+    "ff_options.add_argument(\"--disable-extensions\")\n",
+    "ff_options.add_argument(\"--no-sandbox\")\n",
+    "ff_options.add_argument(\"--disable-dev-shm-usage\")\n",
+    "ff_options.add_argument(\"--disable-popup-blocking\")\n",
+    "ff_options.add_argument(\"--disable-extensions\")\n",
+    "ff_options.set_preference(\"general.useragent.override\", \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36\")\n",
+    "\n",
     "\n",
     "# Configurações do serviço\n",
     "if os.name == 'nt': # Windows\n",
@@ -50,13 +60,12 @@
     "else: # Linux\n",
     "    service = Service('./geckodriver')\n",
     "\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -69,100 +78,79 @@
    ],
    "source": [
     "# pegando metadados da empresa (nome, categoria, reputação, sobre)\n",
-    "try:\n",
     "\n",
-    "   # driver\n",
-    "   driver = webdriver.Firefox(options=ff_options, service=service)\n",
+    "# driver\n",
+    "driver = webdriver.Firefox(options=ff_options, service=service)\n",
+    "\n",
+    "# acessando a pagina principal da empresa\n",
+    "driver.get(url_p)\n",
     "   \n",
-    "   # acessando a pagina principal da empresa\n",
-    "   driver.get(url_p)\n",
-    "      \n",
-    "   # ramo de atividade da empresa\n",
-    "   categoria = driver.find_element(By.ID, 'info_segmento_hero').text\n",
+    "# ramo de atividade da empresa\n",
+    "categoria = driver.find_element(By.ID, 'info_segmento_hero').text\n",
     "\n",
-    "   # reputação da empresa\n",
-    "   reputacao = driver.find_element(By.ID, 'tag_reputacao_hero').text\n",
+    "# reputação da empresa\n",
+    "reputacao = driver.find_element(By.ID, 'tag_reputacao_hero').text\n",
     "\n",
-    "   # sobre a empresa\n",
-    "   sobre = driver.find_element(By.CSS_SELECTOR, 'ul.sc-1915fv4-2.idgfcC').text\n",
-    "   sobre = sobre.split(\"\\n\")[0] \n",
+    "# sobre a empresa\n",
+    "sobre = driver.find_element(By.CSS_SELECTOR, 'ul.sc-1915fv4-2.idgfcC').text\n",
+    "sobre = sobre.split(\"\\n\")[0] \n",
     "\n",
-    "   metadata = {\n",
-    "      'nome': empresa,\n",
-    "      'categoria': categoria,         \n",
-    "      'reputacao': reputacao,         \n",
-    "      'sobre': sobre       \n",
-    "   }\n",
-    "\n",
-    "finally:\n",
-    "\n",
-    "   driver.quit()\n",
+    "metadata = {\n",
+    "   'nome': empresa,\n",
+    "   'categoria': categoria,         \n",
+    "   'reputacao': reputacao,         \n",
+    "   'sobre': sobre       \n",
+    "}\n",
     "\n",
     "\n",
-    "print(metadata)"
+    "print(metadata)\n",
+    "\n",
+    "driver.quit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<selenium.webdriver.remote.webelement.WebElement (session=\"114187ea-7d57-4642-a3a9-4ee5647908c7\", element=\"742704a1-5110-4a75-a78b-02c613758aa2\")>]\n",
-      "fim\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pegando hyperlinks das reclamações respondidas\n",
-    "try:\n",
-    "    # driver\n",
-    "    driver = webdriver.Firefox(options=ff_options, service=service)\n",
+    "\n",
+    "driver = webdriver.Firefox(options=ff_options, service=service)\n",
+    "\n",
+    "driver.get(url_r(page=1, type='EVALUATED'))\n",
+    "\n",
+    "botao = driver.find_element(By.CSS_SELECTOR, 'button.sc-dGCmGc.fwysUb')\n",
+    "botao.click()\n",
+    "\n",
+    "time.sleep(5)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "   \n",
+    "\n",
     "    \n",
-    "    # acessando a pagina de reclamações respondidas\n",
-    "    driver.get(url_r)\n",
-    "        \n",
-    "    # numero de abas de reclamações respondidas\n",
-    "    num_abas = driver.find_elements(By.CSS_SELECTOR, 'span.sc-fAGzit.XgFJr')\n",
     "\n",
-    "    print(num_abas)\n",
+    "    \n",
     "\n",
-    "finally:\n",
-    "    print('fim')\n",
-    "    #driver.quit()"
+    "    \n",
+    "\n",
+    "\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[59]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mnum_abas\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtext\u001b[49m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'list' object has no attribute 'text'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pegando dados das reclamações respondidas\n",
-    "try:\n",
-    "    # driver\n",
-    "    driver = webdriver.Firefox(options=ff_options, service=service)\n",
-    "    \n",
-    "    \n",
     "\n",
-    "finally:\n",
-    "   \n",
-    "    driver.quit()"
+    "\n"
    ]
   }
  ],
