--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Scrapping from reclameaqui.com.br\n",
     "import pandas as pd\n",
     "import time\n",
-    "from selenium import webdriver\n",
+    "import random\n",
     "from selenium.webdriver.firefox.options import Options\n",
     "from selenium.webdriver.firefox.service import Service\n",
     "import os\n",
-    "from selenium.webdriver.common.by import By\n"
+    "from selenium.webdriver.common.by import By\n",
+    "import undetected_chromedriver as uc\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,34 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Configurações do navegador\n",
-    "ff_options = Options()\n",
-    "ff_options.headless = False\n",
-    "ff_options.add_argument(\"--disable-gpu\")\n",
-    "ff_options.add_argument(\"--disable-extensions\")\n",
-    "ff_options.add_argument(\"--no-sandbox\")\n",
-    "ff_options.add_argument(\"--disable-dev-shm-usage\")\n",
-    "ff_options.add_argument(\"--disable-popup-blocking\")\n",
-    "ff_options.add_argument(\"--disable-extensions\")\n",
-    "ff_options.set_preference(\"general.useragent.override\", \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36\")\n",
-    "\n",
-    "\n",
-    "# Configurações do serviço\n",
-    "if os.name == 'nt': # Windows\n",
-    "    service = Service('./geckodriver.exe')\n",
-    "else: # Linux\n",
-    "    service = Service('./geckodriver')\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +54,12 @@
     "# pegando metadados da empresa (nome, categoria, reputação, sobre)\n",
     "\n",
     "# driver\n",
-    "driver = webdriver.Firefox(options=ff_options, service=service)\n",
+    "driver = uc.Chrome()\n",
     "\n",
     "# acessando a pagina principal da empresa\n",
     "driver.get(url_p)\n",
+    "\n",
+    "time.sleep(random.randint(2, 4))\n",
     "   \n",
     "# ramo de atividade da empresa\n",
     "categoria = driver.find_element(By.ID, 'info_segmento_hero').text\n",
@@ -103,27 +79,45 @@
     "}\n",
     "\n",
     "\n",
-    "print(metadata)\n",
-    "\n",
-    "driver.quit()"
+    "print(metadata)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[172], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m botao \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbutton[data-testid=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnext-page-navigation-button\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m driver\u001b[38;5;241m.\u001b[39mexecute_script(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marguments[0].click();\u001b[39m\u001b[38;5;124m\"\u001b[39m, botao)\n\u001b[1;32m---> 13\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandint\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# pegando hyperlinks das reclamações respondidas\n",
     "\n",
-    "driver = webdriver.Firefox(options=ff_options, service=service)\n",
-    "\n",
     "driver.get(url_r(page=1, type='EVALUATED'))\n",
     "\n",
-    "botao = driver.find_element(By.CSS_SELECTOR, 'button.sc-dGCmGc.fwysUb')\n",
-    "botao.click()\n",
+    "for i in range(1):\n",
+    "  \n",
+    "   hyperlinks = driver.find_elements(By.CSS_SELECTOR, 'div.sc-1pe7b5t-0.eJgBOc')\n",
+    "   \n",
+    "   \n",
+    "   botao = driver.find_element(By.CSS_SELECTOR, \"button[data-testid='next-page-navigation-button']\")\n",
+    "   driver.execute_script(\"arguments[0].click();\", botao)\n",
     "\n",
-    "time.sleep(5)\n",
+    "   time.sleep(random.randint(2, 8))\n",
+    "   \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -144,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
