--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,18 @@
     "import pandas as pd\n",
     "import time\n",
     "import random\n",
+    "from selenium import webdriver\n",
     "from selenium.webdriver.firefox.options import Options\n",
     "from selenium.webdriver.firefox.service import Service\n",
-    "import os\n",
+    "from webdriver_manager.firefox import GeckoDriverManager\n",
+    "import os \n",
     "from selenium.webdriver.common.by import By\n",
-    "import undetected_chromedriver as uc\n"
+    "# import undetected_chromedriver as uc\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pegando metadados da empresa (nome, categoria, reputação, sobre)\n",
+    "\n",
+    "# driver\n",
+    "firefox_options = Options()\n",
+    "firefox_options.add_argument(\"--start-maximized\")  # Start maximized (not always supported)\n",
+    "#firefox_options.add_argument(\"--headless\")  # Run headless (optional)\n",
+    "service = Service(GeckoDriverManager().install())\n",
+    "driver = webdriver.Firefox(service=service, options=firefox_options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -51,10 +69,6 @@
     }
    ],
    "source": [
-    "# pegando metadados da empresa (nome, categoria, reputação, sobre)\n",
-    "\n",
-    "# driver\n",
-    "driver = uc.Chrome()\n",
     "\n",
     "# acessando a pagina principal da empresa\n",
     "driver.get(url_p)\n",
@@ -135,47 +149,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "InvalidSessionIdException",
-     "evalue": "Message: invalid session id\nStacktrace:\n\tGetHandleVerifier [0x00F0C7F3+24435]\n\t(No symbol) [0x00E92074]\n\t(No symbol) [0x00D6055E]\n\t(No symbol) [0x00D9B9D8]\n\t(No symbol) [0x00DCD676]\n\t(No symbol) [0x00DC904C]\n\t(No symbol) [0x00DC85C6]\n\t(No symbol) [0x00D33245]\n\t(No symbol) [0x00D3379E]\n\t(No symbol) [0x00D33C1D]\n\tGetHandleVerifier [0x012170A3+3213347]\n\tGetHandleVerifier [0x0122B0C9+3295305]\n\tGetHandleVerifier [0x0122558C+3271948]\n\tGetHandleVerifier [0x00FA7360+658144]\n\t(No symbol) [0x00E9B27D]\n\t(No symbol) [0x00D32F10]\n\t(No symbol) [0x00D32ACA]\n\tGetHandleVerifier [0x0129E9AC+3768620]\n\tBaseThreadInitThunk [0x75387BA9+25]\n\tRtlInitializeExceptionChain [0x7749C2EB+107]\n\tRtlClearBits [0x7749C26F+191]\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInvalidSessionIdException\u001b[0m                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[231], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# pegando dados das reclamações respondidas\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m link \u001b[38;5;129;01min\u001b[39;00m all_hyperlinks:\n\u001b[1;32m----> 5\u001b[0m    \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlink\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m    time\u001b[38;5;241m.\u001b[39msleep(random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m8\u001b[39m))\n\u001b[0;32m     11\u001b[0m    reclamacao \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     12\u001b[0m       \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitulo\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m     13\u001b[0m       \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m     14\u001b[0m       \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     15\u001b[0m    }\n",
-      "File \u001b[1;32mc:\\Users\\sousa\\miniconda3\\Lib\\site-packages\\undetected_chromedriver\\__init__.py:665\u001b[0m, in \u001b[0;36mChrome.get\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    662\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, url):\n\u001b[0;32m    663\u001b[0m     \u001b[38;5;66;03m# if self._get_cdc_props():\u001b[39;00m\n\u001b[0;32m    664\u001b[0m     \u001b[38;5;66;03m#     self._hook_remove_cdc_props()\u001b[39;00m\n\u001b[1;32m--> 665\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\sousa\\miniconda3\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:454\u001b[0m, in \u001b[0;36mWebDriver.get\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    436\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, url: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    437\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Navigate the browser to the specified URL in the current window or\u001b[39;00m\n\u001b[0;32m    438\u001b[0m \u001b[38;5;124;03m    tab.\u001b[39;00m\n\u001b[0;32m    439\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    452\u001b[0m \u001b[38;5;124;03m    >>> driver.get(\"https://example.com\")\u001b[39;00m\n\u001b[0;32m    453\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 454\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGET\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43murl\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43murl\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\sousa\\miniconda3\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:429\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    427\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    428\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 429\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    430\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    431\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Users\\sousa\\miniconda3\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:232\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    230\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    231\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 232\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[1;31mInvalidSessionIdException\u001b[0m: Message: invalid session id\nStacktrace:\n\tGetHandleVerifier [0x00F0C7F3+24435]\n\t(No symbol) [0x00E92074]\n\t(No symbol) [0x00D6055E]\n\t(No symbol) [0x00D9B9D8]\n\t(No symbol) [0x00DCD676]\n\t(No symbol) [0x00DC904C]\n\t(No symbol) [0x00DC85C6]\n\t(No symbol) [0x00D33245]\n\t(No symbol) [0x00D3379E]\n\t(No symbol) [0x00D33C1D]\n\tGetHandleVerifier [0x012170A3+3213347]\n\tGetHandleVerifier [0x0122B0C9+3295305]\n\tGetHandleVerifier [0x0122558C+3271948]\n\tGetHandleVerifier [0x00FA7360+658144]\n\t(No symbol) [0x00E9B27D]\n\t(No symbol) [0x00D32F10]\n\t(No symbol) [0x00D32ACA]\n\tGetHandleVerifier [0x0129E9AC+3768620]\n\tBaseThreadInitThunk [0x75387BA9+25]\n\tRtlInitializeExceptionChain [0x7749C2EB+107]\n\tRtlClearBits [0x7749C26F+191]\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'titulo': 'cobrança anuidade', 'lugar': 'Fortaleza - CE', 'data': '20/03/2025 às 09:14', 'reclamacao_base': 'me ofereceram upgrade de cartão de crédito, aceitei, mas não me foi informado que seria cobrado anuidade. Fui verificar e tem informando que fico insento de anuidade se eu gastar ***** reais no crédito. Como vou gastar esse valor se me foi liberado esse credito? Teriam como verificar? Pois não faz sentido eu gastar um limite que não tenho!!', 'interacoes': ['Resposta da empresa\\n21/03/2025 às 14:37\\nOlá, Matheus!\\n\\nEspero que esteja bem!\\n\\nSou o João Paulo do Banco do Brasil e vim te dar um retorno sobre sua demanda.\\n\\nPrimeiramente, em nome do Banco do Brasil, lamento quaisquer transtornos ou mal-entendidos que possam ter ocorrido, pois o objetivo do BB é sempre a plena satisfação dos clientes.\\n\\nInformo que tentei entrar em contato com você através do telefone cadastrado, porém não obtive sucesso.\\n\\nEm razão do sigilo bancário, existem detalhes que não posso abordar publicamente, pois sempre adotamos medidas para preservar a segurança das informações de nossos clientes, por isso enviei uma resposta privada ao e-mail cadastrado, dá uma olhadinha lá ok? : ) O remetente da mensagem aparecerá como HugMe.\\n\\nApós verificar a resposta privada, peço, por gentileza, que avalie meu atendimento aqui mesmo no portal do Reclame Aqui. Seu feedback é muito importante pra nós.\\n\\nSe precisar de algo mais ou tiver mais alguma dúvida, entre em contato novamente conosco pelos canais disponíveis em www.bb.com.br/atendimento.\\n\\nVocê também pode nos encontrar no 0800 729 0722, 24 horas por dia, todos os dias da semana.\\n\\naBBraços,\\nJoão Paulo do BB', 'Consideração final do consumidor\\n21/03/2025 às 14:46\\nforam rápidos e prestativos'], 'rating': 10, 'again': True}]\n"
      ]
     }
    ],
    "source": [
     "# pegando dados das reclamações respondidas\n",
     "\n",
-    "for link in all_hyperlinks:\n",
+    "reclamacoes = []\n",
+    "# for link in all_hyperlinks:\n",
+    "for link in ['https://www.reclameaqui.com.br/banco-do-brasil/cobranca-anuidade_Lk-6AKyO3vU8Cq0p/']:\n",
     "   \n",
     "   try:\n",
     "      driver.get(link)\n",
     "\n",
     "      time.sleep(random.randint(5, 8))\n",
     "\n",
+    "      titulo = driver.find_element(By.CSS_SELECTOR, 'h1.sc-lzlu7c-3.hnjYTW').text\n",
+    "      lugar = driver.find_element(By.CSS_SELECTOR, '.sc-lzlu7c-6.sc-lzlu7c-7.wFAth.hVBZZt > span').text\n",
+    "      data = driver.find_element(By.CSS_SELECTOR, '.sc-lzlu7c-6.sc-lzlu7c-8.wFAth.biGvqa > span').text\n",
+    "      reclamacao_base = driver.find_element(By.CSS_SELECTOR, '.sc-lzlu7c-17.fRVYjv').text\n",
+    "      interacoes = driver.find_elements(By.CSS_SELECTOR, '[data-testid=\"complaint-interaction\"]')\n",
     "\n",
+    "      interacoes_text = [i.text for i in interacoes]\n",
+    "\n",
+    "      again = driver.find_element(By.CSS_SELECTOR, '.sc-uh4o7z-0.bprQlw:nth-child(2) > div').text\n",
+    "      rating = driver.find_element(By.CSS_SELECTOR, '.sc-uh4o7z-0.bprQlw:nth-child(3) > div').text\n",
+    "\n",
+    "      rating = int(rating.split()[0])\n",
+    "      again = again == 'Sim'\n",
     "\n",
     "      reclamacao = {\n",
-    "         'titulo': None,\n",
-    "         'data': None,\n",
-    "         '...': None\n",
+    "         'titulo': titulo,\n",
+    "         'lugar': lugar,\n",
+    "         'data': data,\n",
+    "         'reclamacao_base': reclamacao_base,\n",
+    "         'interacoes': interacoes_text,\n",
+    "         'rating': rating,\n",
+    "         'again': again\n",
     "      }\n",
+    "\n",
+    "      reclamacoes.append(reclamacao)\n",
     "      \n",
     "\n",
     "   except:\n",
     "      \n",
     "      continue\n",
+    "\n",
+    "print(reclamacoes)\n",
     "\n",
     "   \n",
     "driver.quit()\n",
@@ -186,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "meu_ambiente",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
