feat: scrapping de reclamacoes

--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,8 +164,8 @@
     "# pegando dados das reclamações respondidas\n",
     "\n",
     "reclamacoes = []\n",
-    "# for link in all_hyperlinks:\n",
-    "for link in ['https://www.reclameaqui.com.br/banco-do-brasil/cobranca-anuidade_Lk-6AKyO3vU8Cq0p/']:\n",
+    "for link in all_hyperlinks:\n",
+    "#for link in ['https://www.reclameaqui.com.br/banco-do-brasil/cobranca-anuidade_Lk-6AKyO3vU8Cq0p/']:\n",
     "   \n",
     "   try:\n",
     "      driver.get(link)\n",
