feat: parseando e buscando id

--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,30 +151,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'titulo': 'cobrança anuidade', 'lugar': 'Fortaleza - CE', 'data': '20/03/2025 às 09:14', 'reclamacao_base': 'me ofereceram upgrade de cartão de crédito, aceitei, mas não me foi informado que seria cobrado anuidade. Fui verificar e tem informando que fico insento de anuidade se eu gastar ***** reais no crédito. Como vou gastar esse valor se me foi liberado esse credito? Teriam como verificar? Pois não faz sentido eu gastar um limite que não tenho!!', 'interacoes': ['Resposta da empresa\\n21/03/2025 às 14:37\\nOlá, Matheus!\\n\\nEspero que esteja bem!\\n\\nSou o João Paulo do Banco do Brasil e vim te dar um retorno sobre sua demanda.\\n\\nPrimeiramente, em nome do Banco do Brasil, lamento quaisquer transtornos ou mal-entendidos que possam ter ocorrido, pois o objetivo do BB é sempre a plena satisfação dos clientes.\\n\\nInformo que tentei entrar em contato com você através do telefone cadastrado, porém não obtive sucesso.\\n\\nEm razão do sigilo bancário, existem detalhes que não posso abordar publicamente, pois sempre adotamos medidas para preservar a segurança das informações de nossos clientes, por isso enviei uma resposta privada ao e-mail cadastrado, dá uma olhadinha lá ok? : ) O remetente da mensagem aparecerá como HugMe.\\n\\nApós verificar a resposta privada, peço, por gentileza, que avalie meu atendimento aqui mesmo no portal do Reclame Aqui. Seu feedback é muito importante pra nós.\\n\\nSe precisar de algo mais ou tiver mais alguma dúvida, entre em contato novamente conosco pelos canais disponíveis em www.bb.com.br/atendimento.\\n\\nVocê também pode nos encontrar no 0800 729 0722, 24 horas por dia, todos os dias da semana.\\n\\naBBraços,\\nJoão Paulo do BB', 'Consideração final do consumidor\\n21/03/2025 às 14:46\\nforam rápidos e prestativos'], 'rating': 10, 'again': True}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pegando dados das reclamações respondidas\n",
     "\n",
     "reclamacoes = []\n",
-    "for link in all_hyperlinks:\n",
-    "#for link in ['https://www.reclameaqui.com.br/banco-do-brasil/cobranca-anuidade_Lk-6AKyO3vU8Cq0p/']:\n",
+    "#for link in all_hyperlinks:\n",
+    "for link in ['https://www.reclameaqui.com.br/banco-do-brasil/demora-em-reconhecer-pagamento_f9jqZrP4JrtDNuAC/']:\n",
     "   \n",
     "   try:\n",
     "      driver.get(link)\n",
     "\n",
     "      time.sleep(random.randint(5, 8))\n",
     "\n",
-    "      titulo = driver.find_element(By.CSS_SELECTOR, 'h1.sc-lzlu7c-3.hnjYTW').text\n",
-    "      lugar = driver.find_element(By.CSS_SELECTOR, '.sc-lzlu7c-6.sc-lzlu7c-7.wFAth.hVBZZt > span').text\n",
-    "      data = driver.find_element(By.CSS_SELECTOR, '.sc-lzlu7c-6.sc-lzlu7c-8.wFAth.biGvqa > span').text\n",
+    "      titulo = driver.find_element(By.CSS_SELECTOR, '[data-testid=\"complaint-title\"]').text\n",
+    "      lugar = driver.find_element(By.CSS_SELECTOR, '[data-testid=\"complaint-location\"]').text\n",
+    "      data = driver.find_element(By.CSS_SELECTOR, '[data-testid=\"complaint-creation-date\"]').text\n",
+    "      reclamacao_id = driver.find_element(By.CSS_SELECTOR, '[data-testid=\"complaint-id\"]').text\n",
+    "      \n",
+    "      reclamacao_id = (reclamacao_id.split('ID: ')[1])\n",
+    "\n",
+    "      parsed_data = time.strptime(data, '%d/%m/%Y às %H:%M')\n",
+    "\n",
     "      reclamacao_base = driver.find_element(By.CSS_SELECTOR, '.sc-lzlu7c-17.fRVYjv').text\n",
     "      interacoes = driver.find_elements(By.CSS_SELECTOR, '[data-testid=\"complaint-interaction\"]')\n",
     "\n",
@@ -187,9 +185,10 @@
     "      again = again == 'Sim'\n",
     "\n",
     "      reclamacao = {\n",
+    "         'id': reclamacao_id,\n",
     "         'titulo': titulo,\n",
     "         'lugar': lugar,\n",
-    "         'data': data,\n",
+    "         'data': parsed_data,\n",
     "         'reclamacao_base': reclamacao_base,\n",
     "         'interacoes': interacoes_text,\n",
     "         'rating': rating,\n",
@@ -206,7 +205,7 @@
     "print(reclamacoes)\n",
     "\n",
     "   \n",
-    "driver.quit()\n",
+    "# driver.quit()\n",
     "   \n",
     "\n"
    ]
