--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -149,9 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': '212613917', 'titulo': 'Demora em reconhecer pagamento', 'lugar': 'Catu - BA', 'data': time.struct_time(tm_year=2025, tm_mon=3, tm_mday=19, tm_hour=22, tm_min=41, tm_sec=0, tm_wday=2, tm_yday=78, tm_isdst=-1), 'reclamacao_base': 'Paguei minha fatura pelo pix no dia ***** as ***** e passado 24 horas o pagamento ainda em processamento.', 'interacoes': ['Resposta da empresa\\n20/03/2025 às 11:49\\nOlá, José Roberto!\\n\\nEspero que esteja tudo bem com você!\\n\\nSou o João Paulo do Banco do Brasil e vim te dar um retorno sobre sua reclamação.\\n\\nPrimeiramente, em nome do Banco do Brasil, lamento quaisquer transtornos ou mal-entendidos que possam ter ocorrido, pois o objetivo do BB é sempre a plena satisfação dos clientes.\\n\\nSolicito a sua compreensão, pois como esta resposta é fornecida através de um canal de acesso público, devido às questões relacionadas à segurança das informações (Sigilo Bancário), não poderei detalhar aspectos sobre sua conta ou cadastro.\\n\\nDentro do possível, verifiquei que pós o registro da reclamação o pagamento foi processado e já consta seu faturamento na próxima fatura.\\n\\nEsclareço que logo após realizar o pagamento, o mesmo fica com status em processamento em consulta no aplicativo, porém no caso de pagamento via PIX o limite é recomposto no ato do pagamento.\\n\\nEspero ter esclarecido, José Roberto.\\n\\nPeço a gentileza de avaliar MEU ATENDIMENTO no próprio portal do Reclame Aqui. Sua opinião é importante para mim. Lembrando de não desativar sua manifestação, ok? Pois seu questionamento, bem como nossa resposta, podem ser úteis a outros clientes que eventualmente consultem o portal do Reclame Aqui.\\n\\nSe precisar de algo mais ou tiver mais alguma dúvida, entre em contato novamente conosco pelos canais disponíveis em www.bb.com.br/atendimento.\\n\\nVocê também pode nos encontrar no 0800 729 0722, 24 horas por dia, todos os dias da semana.\\n\\naBBraços,\\nJoão Paulo do BB', 'Consideração final do consumidor\\n20/03/2025 às 12:18\\nBom se não acontecesse mais issso'], 'rating': 10, 'again': True}]\n"
+     ]
+    }
+   ],
    "source": [
     "# pegando dados das reclamações respondidas\n",
     "\n",
