--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,36 @@
     "\n",
     "    # https://www.reclameaqui.com.br/empresa/temu/lista-reclamacoes/?pagina=1&status=EVALUATED\n",
     "    return 'https://www.reclameaqui.com.br/empresa/' + empresa + '/lista-reclamacoes/?pagina='+ str(page) +'&status=' + type\n",
+    "\n",
+    "# driver\n",
+    "driver = uc.Chrome()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pegando as empresas de Bancos e financeiras\n",
+    "\n",
+    "segmentos_fi = [\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/bancos-digitais/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/bancos-tradicionais-e-digitais/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/bancos-com-servicos-internacionais/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/capitalizacao/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/cartoes-de-credito/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/cartoes-de-beneficios/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/consorcios/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/corretoras-e-bancos-de-investimentos/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/criptomoedas/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/emprestimo/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/financiamento/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/forex/',\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/meios-de-pagamento-eletronico/'\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/emissoras-e-bandeiras-cartao-de-credito/'\n",
+    "]\n",
+    "\n",
     "\n"
    ]
   },
@@ -57,9 +87,6 @@
    ],
    "source": [
     "# pegando metadados da empresa (nome, categoria, reputação, sobre)\n",
-    "\n",
-    "# driver\n",
-    "driver = uc.Chrome()\n",
     "\n",
     "if not os.path.exists(f'metadados/metadados_{empresa}.csv'):\n",
     "   # acessando a pagina principal da empresa\n",
@@ -161,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +205,7 @@
     "reclamacoes = []\n",
     "\n",
     "#for link in all_hyperlinks:\n",
-    "for link in all_hyperlinks[0:9]:\n",
+    "for link in all_hyperlinks:\n",
     "   \n",
     "   link = link[0]\n",
     "   \n",
