--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -61,10 +61,11 @@
     "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/emprestimo/',\n",
     "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/financiamento/',\n",
     "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/forex/',\n",
-    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/meios-de-pagamento-eletronico/'\n",
+    "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/meios-de-pagamento-eletronico/',\n",
     "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/emissoras-e-bandeiras-cartao-de-credito/'\n",
     "]\n",
     "\n",
+    "empresas2 = ['ton-solucoes-de-pagamento', 'efi' , 'asaas-gestao-financeira' , 'banco-master' , 'picpay' , 'pagseguro' , 'banqi' , 'next-me' , 'nubank', 'banco-sofisa' , 'in-mais' , 'banco-neon' , 'contbank' , 'facilitypay', 'tribanco']\n",
     "\n"
    ]
   },
@@ -267,7 +268,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "meu_ambiente",
    "language": "python",
    "name": "python3"
   },
