--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +64,9 @@
     "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/meios-de-pagamento-eletronico/',\n",
     "   'https://www.reclameaqui.com.br/segmentos/bancos-e-financeiras/emissoras-e-bandeiras-cartao-de-credito/'\n",
     "]\n",
+    "\n",
+    "empresas2 = ['ton-solucoes-de-pagamento', 'efi' , 'asaas-gestao-financeira' , 'banco-master' , 'picpay' , 'pagseguro' , 'banqi' , 'next-me' , 'nubank', 'banco-sofisa' , 'in-mais' , 'banco-neon' , 'contbank' , 'facilitypay', 'tribanco']\n",
+    "\n",
     "\n",
     "\n"
    ]
