--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "empresas2 = ['ton-solucoes-de-pagamento', 'efi' , 'asaas-gestao-financeira' , 'banco-master' , 'picpay' , 'pagseguro' , 'banqi' , 'next-me' , 'nubank', 'banco-sofisa' , 'in-mais' , 'banco-neon' , 'contbank' , 'facilitypay', 'tribanco']\n",
     "\n",
-    "\n",
+    "empresas = ['euro17-credito', 'emprestimo-sim', 'up-p', 'losango', 'banco-sofisa', 'banco-bmg', 'coin-nacional', 'finanzero', 'konsi', 'cashme']\n",
     "\n"
    ]
   },
@@ -140,8 +140,6 @@
    "source": [
     "# pegando hyperlinks das reclamações avaliadas e/ou respondidas\n",
     "\n",
-    "driver.get(url_r(page=1, type='EVALUATED'))\n",
-    "\n",
     "all_hyperlinks = []\n",
     "Numero_de_paginas = 50  # máximo de 50 páginas\n",
     "\n",
@@ -150,6 +148,9 @@
     "   \n",
     "   for i in range(Numero_de_paginas):\n",
     "      try:\n",
+    "         driver.get(url_r(page=i, type='EVALUATED'))\n",
+    "\n",
+    "      \n",
     "         # Captura os hyperlinks da página atual\n",
     "         div_hyperlinks = driver.find_elements(By.CSS_SELECTOR, 'div.sc-1pe7b5t-0.eJgBOc')\n",
     "         current_hyperlinks = [h.find_element(By.CSS_SELECTOR, 'a').get_attribute('href') for h in div_hyperlinks]\n",
@@ -161,18 +162,10 @@
     "         print(f\"Página {i+1} - hyperlinks: {current_hyperlinks}\")\n",
     "         all_hyperlinks += current_hyperlinks\n",
     "\n",
-    "         botao = driver.find_element(By.CSS_SELECTOR, \"button[data-testid='next-page-navigation-button']\")\n",
-    "         driver.execute_script(\"arguments[0].click();\", botao)\n",
+    "         \n",
     "         time.sleep(random.randint(5, 8))\n",
     "\n",
-    "         div_hyperlinks_next = driver.find_elements(By.CSS_SELECTOR, 'div.sc-1pe7b5t-0.eJgBOc')\n",
-    "         next_hyperlinks = [h.find_element(By.CSS_SELECTOR, 'a').get_attribute('href') for h in div_hyperlinks_next]\n",
-    "\n",
-    "         # Se os hyperlinks não mudaram, chegou à última página\n",
-    "         if next_hyperlinks == current_hyperlinks:\n",
-    "               print(\"Última página alcançada\")\n",
-    "               break\n",
-    "\n",
+    "        \n",
     "      except Exception as e:\n",
     "         print(f\"Erro encontrado: {e}\")\n",
     "         break\n",
@@ -273,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
